--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,4 @@
-// Начните писать стили здесь
+@import "./fonts.scss";
+@import "./variables.scss";
+@import "./mixins.scss";
+@import "./blocks/page-header.scss";
