--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,15 @@
 @import "./fonts.scss";
 @import "./variables.scss";
 @import "./mixins.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/button.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/description.scss";
+@import "./blocks/features.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/map.scss";
 @import "./blocks/page-header.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/service.scss";
