--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,9 +1,14 @@
 $white-color: #ffffff;
 $white-60-color: rgba(255, 255, 255, 0.6);
 $white-30-color: rgba(255, 255, 255, 0.3);
+$white-20-color: rgba(255, 255, 255, 0.2);
 
 $black-color: #000000;
 $black-30-color: rgba(0, 0, 0, 0.3);
+$black-20-color: rgba(0, 0, 0, 0.2);
+$black-0-color: rgba(0, 0, 0, 0);
+
+$shadow-20-color: rgba(1, 1, 1, 0.2);
 
 $dark-grey-color: #333333;
 $dark-grey-30-color: rgba(51, 51, 51, 0.3);
