--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 @import "./blocks/logo.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/map.scss";
+@import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/service.scss";
