--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,6 +7,7 @@
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
+  text-transform: uppercase;
   text-align: center;
   color: $dark-grey-color;
 
