--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,9 +8,12 @@
 @import "./blocks/features.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/main.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/map.scss";
 @import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/service.scss";
+@import "./blocks/social.scss";
+@import "./blocks/title.scss";
