Вносит правки в стили и разметку: убирает лишние margin и padding, уточняет размеры и выравнивание изображений

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -17,6 +17,10 @@
   &--blue-theme {
     color: $white-color;
     background-color: $blue-default-color;
+
+    & .features__subtitle {
+      color: inherit;
+    }
   }
 
   &--gray-theme {
@@ -51,4 +55,5 @@
 
 .features__image {
   @include image-size;
+  vertical-align: bottom;
 }
