--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,7 +4,7 @@
   background-color: $blue-click-color;
 
   background-image: url("../img/left-pattern-promo.svg"), url("../img/right-pattern-promo.svg"), url("../img/bg-mobile.jpg");
-  background-size: auto, auto, contain;
+  background-size: auto, auto, cover;
   background-position: bottom left, bottom right, top center;
   background-repeat: no-repeat, no-repeat, no-repeat;
 }
