--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -16,8 +16,8 @@
     box-shadow: inset 0 1px 0 $white-20-color;
   }
 
-  &--gradient {
-    background-image: linear-gradient(to top, $black-20-color, $black-0-color 13%, transparent 13%, transparent 100%);
+  &:last-child {
+    background-image: linear-gradient(to top, $black-20-color, $black-0-color 13%);
   }
 }
 
