Добавляет стили и изображения для блока фото-галереи на странице Каталога

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "./blocks/main-nav.scss";
 @import "./blocks/map.scss";
 @import "./blocks/page-header.scss";
+@import "./blocks/photo-gallery.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/service.scss";
 @import "./blocks/social.scss";
