--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -2,5 +2,7 @@
 
 .main__page-title {
   @include container;
-  padding: 32px 30px 35px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 32px 25px 35px;
 }
