Добавляет препроцессорный файл и стили для блока видео-презентации на странице Каталога

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,4 @@
 @import "./blocks/promo.scss";
 @import "./blocks/service.scss";
 @import "./blocks/social.scss";
+@import "./blocks/video-presentation.scss";
