--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,7 +7,9 @@
 @import "./blocks/button.scss";
 @import "./blocks/copyright.scss";
 @import "./blocks/features.scss";
+@import "./blocks/feedback.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/form.scss";
 @import "./blocks/main.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/map.scss";
