--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,32 +1,96 @@
 @use "mixins.scss";
 
-.form__wrapper {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-
 .form__block {
   margin-left: 0;
   margin-right: 0;
-  margin-bottom: 23px;
   padding: 0;
   border: none;
+}
+
+.form__personal-info {
+  margin-bottom: 23px;
+}
+
+.form__contact-info {
+  margin-bottom: 18px;
 }
 
 .form__title {
   width: 100%;
   padding: 24px 0 20px;
-  box-shadow: 0 -1px 0 0 $grey-form-hover-color;
+  border-top: 1px solid $grey-form-hover-color;
+}
+
+.form__opinion .form__title,
+.form__checklist .form__title {
+  padding-bottom: 30px;
 }
 
 .form__box {
-  margin-top: 0;
-  margin-bottom: 16px;
+  margin: 0 20px 16px;
   text-align: left;
 }
 
 .form__label {
   padding-left: 16px;
+
+  // &-radio,
+  // &-checkbox {
+  //   position: relative;
+  //   display: block;
+  //   cursor: pointer;
+
+  //   margin-left: 66px;
+  //   padding-bottom: 36px;
+
+  //   font-size: 18px;
+  //   line-height: 26px;
+  //   font-weight: 700;
+  //   text-transform: none;
+  //   color: $black-color;
+  // }
+
+  // &-radio::before {
+  //   position: absolute;
+  //   content: "";
+  //   left: -46px;
+  //   top: -10px;
+  //   width: 46px;
+  //   height: 46px;
+  //   border-radius: 50%;
+  //   background-color: $grey-form-color;
+  // }
+
+  // .form__radio-field:checked + &-radio::after {
+  //   position: absolute;
+  //   content: "";
+  //   left: -31px;
+  //   top: 5px;
+  //   width: 16px;
+  //   height: 16px;
+  //   border-radius: 50%;
+  //   background-color: $dark-grey-color;
+  // }
+
+  // &-checkbox::before {
+  //   position: absolute;
+  //   content: "";
+  //   left: -46px;
+  //   top: -10px;
+  //   width: 46px;
+  //   height: 46px;
+  //   background-color: $grey-form-color;
+  // }
+
+  // .form__checkbox:checked + &-checkbox::after {
+  //   position: absolute;
+  //   content: "";
+  //   left: -33px;
+  //   top: 7px;
+  //   width: 22px;
+  //   height: 16px;
+  //   background-image: url("../img/icon-tick.svg");
+  // }
 }
 
 .form__text-field {
@@ -61,4 +125,66 @@
 .form__radio-field,
 .form__checkbox {
   @include visually-hidden;
+}
+
+.form__label-radio,
+.form__label-checkbox {
+  position: relative;
+  display: block;
+  cursor: pointer;
+
+  margin-left: 66px;
+  padding-bottom: 36px;
+
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: none;
+  color: $black-color;
+}
+
+.form__label-radio {
+  &::before {
+    position: absolute;
+    content: "";
+    left: -46px;
+    top: -10px;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    background-color: $grey-form-color;
+  }
+
+  .form__radio-field:checked + &::after {
+    position: absolute;
+    content: "";
+    left: -31px;
+    top: 5px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: $dark-grey-color;
+  }
+}
+
+.form__label-checkbox {
+  &::before {
+    position: absolute;
+    content: "";
+    left: -46px;
+    top: -10px;
+    width: 46px;
+    height: 46px;
+    background-color: $grey-form-color;
+  }
+
+  .form__checkbox:checked + &::after {
+    position: absolute;
+    content: "";
+    left: -33px;
+    top: 7px;
+    width: 22px;
+    height: 16px;
+    background-image: url("../img/icon-tick.svg");
+  }
 }
