--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -52,6 +52,16 @@
   &[type="text"]::placeholder {
     color: $black-color;
   }
+
+  &:hover {
+    background-color: $grey-form-hover-color;
+  }
+
+  &:focus {
+    background-color: transparent;
+    outline: none;
+    border: 4px solid $grey-form-hover-color;
+  }
 }
 
 .form__text-field[type="tel"],
@@ -97,6 +107,14 @@
     background-color: $grey-form-color;
   }
 
+  &:hover::before {
+    background-color: $grey-form-hover-color;
+  }
+
+  &:active::before {
+    background-color: $grey-form-down-color;
+  }
+
   .form__radio-field:checked + &::after {
     position: absolute;
     content: "";
@@ -106,6 +124,10 @@
     height: 16px;
     border-radius: 50%;
     background-color: $dark-grey-color;
+  }
+
+  .form__radio-field:checked + &:active::after {
+    background-color: $dark-grey-30-color;
   }
 }
 
@@ -120,6 +142,14 @@
     background-color: $grey-form-color;
   }
 
+  &:hover::before {
+    background-color: $grey-form-hover-color;
+  }
+
+  &:active::before {
+    background-color: $grey-form-down-color;
+  }
+
   .form__checkbox:checked + &::after {
     position: absolute;
     content: "";
@@ -128,6 +158,10 @@
     width: 22px;
     height: 16px;
     background-image: url("../img/icon-tick.svg");
+  }
+
+  .form__checkbox:checked + &:active::after {
+    background-image: url("../img/icon-tick-down.svg");
   }
 }
 
