--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import "./blocks/main.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/map.scss";
+@import "./blocks/modal.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/photo-gallery.scss";
 @import "./blocks/promo.scss";
