Добавляет сетку раздела навигации для мобильной версии сайта (мобильное меню) и часть элементов для адаптивной сетки меню

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -36,3 +36,21 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+// @media (min-width: $tablet-width) {
+//   @mixin container {
+//     box-sizing: border-box;
+//     width: $tablet-width;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+// }
+
+// @media (min-width: $desktop-width) {
+//   @mixin container {
+//     box-sizing: border-box;
+//     width: $desktop-width;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+// }
