--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,9 @@
 @use "mixins.scss";
 
+.page-header {
+  background-color: $white-color;
+}
+
 .page-header__main-nav,
 .page-header__promo {
   @include container;
