--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "./blocks/main-nav.scss";
 @import "./blocks/map.scss";
 @import "./blocks/modal.scss";
+@import "./blocks/logo.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/photo-gallery.scss";
 @import "./blocks/promo.scss";
