--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,3 +24,7 @@ $brown-carrent-color: #766357;
 $blue-default-color: #81b3d2;
 $blue-hover-color: #669ec0;
 $blue-click-color: #5496bd;
+
+$tablet-width: 768px;
+$desktop-width: 1200px;
+$mobile-width-only: 767px;
