--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,13 +3,13 @@
 .promo {
   background-color: $blue-click-color;
 
-  background-image: url("../img/left-pattern-promo.svg"), url("../img/right-pattern-promo.svg"), url("../img/bg-mobile-index.jpg");
-  background-size: auto, auto, cover;
-  background-position: bottom left, bottom right, top center;
-  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-mobile.jpg");
+  background-size: auto, cover;
+  background-position: bottom center, top center;
+  background-repeat: no-repeat, no-repeat;
 
   &--inner {
-    background-image: url("../img/left-pattern-promo.svg"), url("../img/right-pattern-promo.svg"), url("../img/bg-mobile.jpg");
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-mobile.jpg");
   }
 }
 
@@ -21,5 +21,29 @@
   &--inner {
     padding-top: 52px;
     padding-bottom: 67px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .promo {
+    background-image: url("../img/pattern-promo.svg"), url("../img/bg-index-desktop.jpg");
+
+    &--inner {
+      background-image: url("../img/pattern-promo.svg"), url("../img/bg-inner-desktop.jpg");
+    }
+  }
+
+  .promo__slogan-image {
+    width: 461px;
+    height: 350px;
+    padding-top: 77px;
+    padding-bottom: 91px;
+
+    &--inner {
+      width: 229px;
+      height: 39px;
+      padding-top: 95px;
+      padding-bottom: 117px;
+    }
   }
 }
