--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -47,26 +47,22 @@
   box-sizing: border-box;
   border: none;
 
+  color: $black-30-color;
   background-color: $grey-form-color;
-
-  &[type="text"]::placeholder {
-    color: $black-color;
-  }
 
   &:hover {
     background-color: $grey-form-hover-color;
   }
 
+  &:hover::placeholder {
+    color: $black-color;
+  }
+
   &:focus {
     background-color: transparent;
-    outline: none;
-    border: 4px solid $grey-form-hover-color;
+    color: $black-color;
+    outline: 4px solid $grey-form-hover-color;
   }
-}
-
-.form__text-field[type="tel"],
-.form__text-field[type="email"] {
-  color: $black-30-color;
 }
 
 .form__list {
@@ -139,6 +135,7 @@
     top: -10px;
     width: 46px;
     height: 46px;
+    border-radius: 4px;
     background-color: $grey-form-color;
   }
 
@@ -171,10 +168,6 @@
 
 .form__comment .form__label {
   @include visually-hidden;
-}
-
-.form__textarea-field::placeholder {
-  color: $dark-grey-30-color;
 }
 
 .form__submit-wrapper {
