--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -6,3 +6,15 @@
   margin-bottom: 0;
   padding: 32px 25px 35px;
 }
+
+@media (min-width: $tablet-width) {
+  .main__page-title {
+    padding: 47px 30px 32px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main__page-title {
+    padding: 59px 50px 32px;
+  }
+}
