--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -103,6 +103,13 @@
     grid-column-end: -1;
     grid-row-start: 1;
     grid-row-end: 4;
+
+    &--other-order {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 4;
+    }
   }
 
   .features__list-benefits {
