--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,7 @@ $grey-form-down-color: #d5d5d5;
 $brown-carrent-color: #766357;
 
 $blue-default-color: #81b3d2;
+$blue-mark-color: #81b3d3;
 $blue-hover-color: #669ec0;
 $blue-click-color: #5496bd;
 
