--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -4,6 +4,8 @@
   @include link-decoration;
 
   display: block;
+  position: relative;
+  box-sizing: border-box;
   font-family: inherit;
   font-size: 14px;
   line-height: 21px;
@@ -14,7 +16,7 @@
   color: $black-color;
 
   margin: 0;
-  padding: 0 55px 20px;
+  padding: 0 120px 20px 80px;
 
   &[href]:hover {
     color: $blue-default-color;
@@ -23,4 +25,13 @@
   &[href]:active {
     color: $grey-click-color;
   }
+}
+
+.copyright__icon {
+  position: absolute;
+  top: -50%;
+  transform: translateY(50%);
+  right: 96px;
+  width: 27px;
+  height: 34px;
 }
